f
In file included from monty.h:27:0,
                 from cleaner.c:1:
lists.h:19:17: error: conflicting types for ‘dlistint_t’
 typedef stack_t dlistint_t;
                 ^
lists.h:18:3: note: previous declaration of ‘dlistint_t’ was here
 } dlistint_t;
   ^
In file included from monty.h:27:0,
                 from get_opcode.c:1:
lists.h:19:17: error: conflicting types for ‘dlistint_t’
 typedef stack_t dlistint_t;
                 ^
lists.h:18:3: note: previous declaration of ‘dlistint_t’ was here
 } dlistint_t;
   ^
In file included from monty.h:27:0,
                 from main.c:1:
lists.h:19:17: error: conflicting types for ‘dlistint_t’
 typedef stack_t dlistint_t;
                 ^
lists.h:18:3: note: previous declaration of ‘dlistint_t’ was here
 } dlistint_t;
   ^
In file included from monty.h:27:0,
                 from opcode_functions.c:1:
lists.h:19:17: error: conflicting types for ‘dlistint_t’
 typedef stack_t dlistint_t;
                 ^
lists.h:18:3: note: previous declaration of ‘dlistint_t’ was here
 } dlistint_t;
   ^
In file included from monty.h:27:0,
                 from parse.c:1:
lists.h:19:17: error: conflicting types for ‘dlistint_t’
 typedef stack_t dlistint_t;
                 ^
lists.h:18:3: note: previous declaration of ‘dlistint_t’ was here
 } dlistint_t;
   ^
In file included from monty.h:27:0,
                 from reader.c:1:
lists.h:19:17: error: conflicting types for ‘dlistint_t’
 typedef stack_t dlistint_t;
                 ^
lists.h:18:3: note: previous declaration of ‘dlistint_t’ was here
 } dlistint_t;
   ^
In file included from stack.c:1:0:
lists.h:19:17: error: conflicting types for ‘dlistint_t’
 typedef stack_t dlistint_t;
                 ^
lists.h:18:3: note: previous declaration of ‘dlistint_t’ was here
 } dlistint_t;
   ^
